@@ -1,21 +1,14 @@
 plugins {
     id 'jacoco'
-    id 'org.ajoberstar.reckon' version '0.13.2'
-    id 'org.sonarqube' version '3.0'
+    id 'org.sonarqube' version '7.2.2.6593'
     id 'com.gradle.plugin-publish' version '1.2.0'
     id 'be.vbgn.ci-detect' version '0.5.0'
-    id 'be.vbgn.dev-conventions.opinion' version '0.5.0'
-    id 'nebula.integtest' version '7.0.9'
-    id "io.freefair.lombok" version "5.3.0"
+    id 'com.netflix.nebula.integtest' version '13.0.1'
+    id "io.freefair.lombok" version "9.2.0"
     id 'groovy'
 }
 
 group 'eu.xenit.gradle'
-
-reckon {
-    scopeFromProp()
-    stageFromProp('alpha', 'beta', 'rc', 'final')
-}
 
 lombok {
     version = "1.18.30"
@@ -33,15 +26,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jreleaser:org.jreleaser.gradle.plugin:1.19.0'
+    implementation 'com.gradleup.nmcp:com.gradleup.nmcp.gradle.plugin:1.4.4'
 
     integTestImplementation "commons-io:commons-io:2.8.0"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:3.7.7'
-    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.4'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
+
+    testImplementation 'org.hamcrest:hamcrest:3.0'
+
+    testImplementation 'org.mockito:mockito-core:5.14.2'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
+
+    testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
 }
 
 gradlePlugin {
+    vcsUrl = "https://github.com/xenit-eu/enterprise-conventions-gradle-plugin"
+    website = vcsUrl
     plugins {
         privatePlugin {
             id = 'eu.xenit.enterprise-conventions.private'
@@ -83,14 +86,17 @@ gradlePlugin {
     testSourceSets(sourceSets.integTest)
 }
 
-pluginBundle {
-    vcsUrl = "https://github.com/xenit-eu/enterprise-conventions-gradle-plugin"
-    website = vcsUrl
-    description = "Xenit OSS and private conventions plugins"
-    tags = ["conventions", "repository-replacement", "repositories", "security"]
+test {
+    useJUnitPlatform()
+    // Required for System Lambda to manipulate environment variables in Java 17+
+    jvmArgs = [
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    ]
 }
 
 integrationTest {
+    useJUnitPlatform()
     if (gradle.startParameter.offline) {
         systemProperty "eu.xenit.enterprise.conventions.integration.gradle-offline", "true"
     }
